# ShootEmUp

./: .gitignore  README.md  Tuprules.tup  build.py  game.yaml  requirements.txt  rom.cfg
assets/: background.pyxel  fish.pyxel  objects.yaml  rock.pyxel  ships.chr  ships.pyxel
assets/levels/: Tupfile  starfield.pyxel  starfield2.pyxel
assets/levels/demo/: level.yaml
assets/tilesets/: Tupfile  ships.pyxel
docs/: architecture.md
editor/: .gitignore  CMakeLists.txt  brushtoolpanel.cpp  brushtoolpanel.h  brushtoolpanel.ui  canvas.cpp  canvas.h  commands.cpp  commands.h  level.cpp  level.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scene.cpp  scene.h  state.cpp  state.h  tileset_explorer.cpp  tileset_explorer.h  tileset_explorer.ui  tileset_view.cpp  tileset_view.h
editor/chrplugin/: CMakeLists.txt  chrplugin.cpp  chrplugin.h  chrplugin.json
editor/icons/: no-tile.pyxel
src/: Tupfile  animation.asm  color_settings.asm  constants.asm  enemy.asm  globals.asm  input.asm  macros.asm  main.asm  math.asm  memory.asm  nes.asm  rom.asm.in  structs.asm  testbed.asm  testbed_config.asm  video.asm
src/components/: actor.asm  actor_cmp.asm  collision.asm  enemy.asm  enemy_cmp.asm  health.asm  movement.asm  sprite.asm
src/entities/: enemy.asm  entity.asm  flame.asm  player.asm  projectile.asm  rainbow.asm
src/game_modes/: game_over.asm  shooter.asm
src/tests/: conftest.py  test_cpu.py  test_macros.py  test_math.py  test_movement.py  test_rom.cfg
src/worlds/: battle.asm
tools/: asmlint.py  bmp2chr.py  bmp2lvl.py  genrom.py  lvl2bin.py  pilbmp2nes.py
tools/asmlint/: requirements.txt
tools/asmlint/src/asmlint/: __main__.py  lexer.py
tools/asmlint/src/asmlint/rules/: __init__.py  comments.py
tools/asmlint/src/tests/: test_lexer.py
tools/asmlint/src/tests/rules/: test_comments.py
tools/editor/: editor.pro  gameobject.cpp  gameobject.h  gameobjectinstance.cpp  gameobjectinstance.h  leveldata.cpp  leveldata.h  main.cpp  main.qml  qml.qrc
tools/editor/Editor/: MapCanvas.qml  ObjectsPanel.qml  Style.qml  editor.qmltypes  main.qml  qmldir
tools/editor/Editor/Controls/: Button.qml
tools/editor/lib/: yaml-cpp.lib
tools/editor/qml/: MapCanvas.qml  ObjectsPanel.qml  Style.qml  main.qml
tools/editor/qml/Controls/: Button.qml
